Resources/CSS/main.css
/* RESET */
/*
Home
Light:  #009ae2
Dark:   #0072a7

News
Light:  #16992f
Dark:   #0f7c23

Media
Light:  #f21818
Dark:   #c31515

Learn
Light:  #f2ae00
Dark:   #b17f00

Competitive
Light:  #4f009d
Dark:   #3c0077

Blog
Light:  #3d3d3d
Dark:   #282828
*/

body{
    margin: 0px;
    padding: 0px;
    color: black;
    background-color: #000000;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

a:link {color: #009AE2; text-decoration: none; font-weight: 700;}       /* unvisited link */
a:visited {color: #009AE2; text-decoration: none; font-weight: 700;}    /* visited link */
a:hover {color: #009AE2; text-decoration: underline; font-weight: 700;} /* mouse over link */
a:active {color: #009AE2; text-decoration: none; font-weight: 700;}     /* active link */



/* MAIN CONTAINER */
#MainWrapper{
    margin-left: auto;
    margin-right: auto;
    margin-top 0px;
    padding: 0px;
    display: block;
    background-image: url('../img/repeat.png');
    width: 1090px;
}


/* Navigation NOTE: no longer falls in main wrapper */
#NavigationWrapper{
    margin-left:auto;
    margin-right: auto;
    margin-bottom: 0px;
    width: 1090px;
}

    ul#menu {
        margin: 0px;
        padding: 0px;
        height: 42px;
        background-color: black;
    }

    /* Search */
    li.Search {
        font-family: 'Droid Sans', sans-serif;
        float: right;
        height: 42px;
        line-height: 40px;
        margin-right: 10px;
        list-style: none;
    }

    /* Substyles */
    li.NavBlue {
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        text-transform: uppercase;
        height: 42px;
        color: white;
        list-style: none;
        float: left;
        line-height: 42px; 
        font-size: 24px;
    }

    li.NavBlue:hover {
        background-color: #009AE2;
        cursor: pointer;
    }

    li.NavBlue a {
        display: block;
        color: white;
        text-decoration: none;
    }

    li.NavOrange {
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        text-transform: uppercase;
        height: 42px;
        color: white;
        list-style: none;
        float: left;
        line-height: 42px; 
        font-size: 24px;
    }

    li.NavOrange:hover {
        background-color: #f2ae00;
        cursor: pointer;
    }

    li.NavOrange a {
        display: block;
        color: white;
        text-decoration: none;
    }

    li.NavPurple {
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        text-transform: uppercase;
        height: 42px;
        color: white;
        list-style: none;
        float: left;
        line-height: 42px; 
        font-size: 24px;
    }

    li.NavPurple:hover {
        background-color: #4f009d;
        cursor: pointer;
    }

    li.NavPurple a {
        display: block;
        color: white;
        text-decoration: none;
    }

    li.NavGreen {
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        text-transform: uppercase;
        height: 42px;
        color: white;
        list-style: none;
        float: left;
        line-height: 42px; 
        font-size: 24px;
    }

    li.NavGreen:hover {
        background-color: #16992f;
        cursor: pointer;
    }

    li.NavGreen a {
        display: block;
        color: white;
        text-decoration: none;
    }

    li.NavRed {
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        text-transform: uppercase;
        height: 42px;
        color: white;
        list-style: none;
        float: left;
        line-height: 42px; 
        font-size: 24px;
    }

    li.NavRed:hover {
        background-color: #c31515;
        cursor: pointer;
    }

    li.NavRed a {
        display: block;
        color: white;
        text-decoration: none;
    }

    li.NavGray {
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        text-transform: uppercase;
        height: 42px;
        color: white;
        list-style: none;
        float: left;
        line-height: 42px; 
        font-size: 24px;
    }

    li.NavGray:hover {
        background-color: #d4d4d4;
        cursor: pointer;
    }

    li.NavGray a {
        display: block;
        color: white;
        text-decoration: none;
    }

    /* Accent Bars */
    #BarBlue{
        width: 100%;
        height: 5px;
        background-color: #009AE2;
    }

    #BarOrange{
        width: 100%;
        height: 5px;
        background-color: #f2ae00;
    }

    #BarGreen{
        width: 100%;
        height: 5px;
        background-color: #16992f;
    }

    #BarPurple{
        width: 100%;
        height: 5px;
        background-color: #4f009d;
    }

    #BarRed{
        width: 100%;
        height: 5px;
        background-color: #c31515;
    }

    #BarGray{
        width: 100%;
        height: 5px;
        background-color: #d4d4d4;
    }

    /* Slider */
    #Slider{
        width: 100%;
        margin-top: 0px;
        max-height: 238px;
        background: pink;
        overflow: hidden;
    }

    ul#bxslider {
        margin: 180px;
        padding: 0px;
    }

/* Social icons */
#Social{
    clear: both;
    padding-top: 10px;
    padding-left: 10px;
    width: 100%;
    height: 27px;
    overflow: hidden;
}


/* Front page dividers | Category display */
#LeftContainer{
    float: left;
    width: 800px;
    background-image: url('../img/repeat.png');
}

    #CategoryLeft{
        float: left;
        width: 48%;
        background-color: black;
        border: 1px solid black;
        margin-left: 10px;
        margin-top: 10px;
    }

    #CategoryRight{
        float: right;
        width: 48%;
        background-color: black;
        border: 1px solid black;
        margin-left: 10px;
        margin-top: 10px;
    }

    #CategoryHeader{
        float: left;
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        text-transform: uppercase;
        height: 30px;
        line-height: 30px; 
        font-size: 24px;
        color: white;
        padding-left: 10px;
    }

        #CategoryHeader a:link    {color: white; text-decoration: none;}
        #CategoryHeader a:visited {color: white; text-decoration: none;}
        #CategoryHeader a:hover   {color: white; text-decoration: none;}
        #CategoryHeader a:active  {color: white; text-decoration: none;}

    #CategoryList{
        float: left;
        width: 100%;
        font-family: 'Droid Sans', sans-serif;
        font-size: 14px;
        color: black;  
    }

        /* Category accents */
        #CatBlue{
            float: left;
            width: 100%;
            height: 5px;
            background-color: #009AE2;
        }

        #CatOrange{
            float: left;
            width: 100%;
            height: 5px;
            background-color: #f2ae00;
        }

        #CatPurple{
            float: left;
            width: 100%;
            height: 5px;
            background-color: #4f009d;
        }

        #CatRed{
            float: left;
            width: 100%;
            height: 5px;
            background-color: #c31515;
        }

        #CatGreen{
            float: left;
            width: 100%;
            height: 5px;
            background-color: #16992f;
        }

        #CatGray{
            float: left;
            width: 100%;
            height: 5px;
            background-color: #d4d4d4;
        }

        /* Image porperties */
        img.frontpage{
            border: 1px solid black;
            margin: 10px;
            float: left;
            max-height: 100px;
            max-width: 100px;
        }

        /* Article properties */
        #ArticlePreview{
            background-color: #f6f6f6;
            overflow: hidden;
            width: 100%;
        }

        #ArticlePreview h1        {text-transform: capitalize; font-size: 22px; margin: 0px; padding: 0px; margin-top: 10px;}
        #ArticlePreview h2        {text-transform: capitalize; font-size: 10px; margin: 0px; padding: 0px;}
        #ArticlePreview p         {font-size: 14px; margin: 0px; padding: 0px; margin-top: 7px;}
        #ArticlePreview a:link    {color: black; text-decoration: none;}
        #ArticlePreview a:visited {color: black; text-decoration: none;}
        #ArticlePreview a:hover   {color: black; text-decoration: none;}
        #ArticlePreview a:active  {color: black; text-decoration: none;}
    

/* Front page dividers | Sidebar Widgets */
#RightContainer{
    float: left;
    width: 290px;
    background-image: url('../img/repeat.png');
}

    #SidebarWrapper{
        margin-top: 10px;
        margin-left: 10px;
        margin-right: 5px;
        border: 1px black solid;    
    }

    #SidebarHeader{
        background-color: black;
        font-family: 'Montserrat', sans-serif;
        font-weight: 700;
        text-transform: uppercase;
        height: 30px;
        line-height: 30px; 
        font-size: 24px;
        color: white;
        padding-left: 10px;
    }

    #SidebarContent{
        background-color: #f6f6f6;
        overflow: hidden;
        padding: 5px;
        font-family: 'Droid Sans', sans-serif;
        font-size: 14px;
    }

